fix list item horizontal spacing

--- a/src/_scss/typography/_mod.scss
+++ b/src/_scss/typography/_mod.scss
@@ -90,4 +90,9 @@ hr {
 			font-size: 3.7rem;
 		}
 	}
+
+	li {
+		margin-left: 1em;
+		padding-left: 0;
+	}
 }
